@@ -1,4 +1,4 @@
-CHANGES.txt - 03/11/2003
+CHANGES.txt - 03/21/2003
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.24
@@ -25,6 +25,7 @@ CHANGES IN HTMLDOC v1.8.24
 
     BUG FIXES
 
+	- Whitespace before a link was underlined.
 	- Fixed a table column sizing bug.
 	- HTMLDOC didn't read back the HTTP response properly in
 	  all situations.
